[gd_scene load_steps=6 format=3 uid="uid://d2atoeymmwgmc"]

[ext_resource type="Script" uid="uid://o3bd76c5uftp" path="res://scripts/shop.gd" id="1_lx5au"]
[ext_resource type="Texture2D" uid="uid://c2lby63veavjx" path="res://images/coin.png" id="2_1l46r"]
[ext_resource type="Texture2D" uid="uid://b3ehtv1cr1rml" path="res://images/shopbg.png" id="2_2fc2m"]
[ext_resource type="PackedScene" uid="uid://bo5twrprw2cma" path="res://scenes/bag.tscn" id="2_xfvoa"]
[ext_resource type="Texture2D" uid="uid://cthtkvk6httgc" path="res://images/bag.png" id="3_8r1wq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lx5au")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -19.0
offset_right = 192.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2fc2m")
expand_mode = 1
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.827451, 0.568627, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="cont1" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="cont2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 80
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 194.0
offset_right = 323.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 48
text = "Leave Shop"

[node name="coins" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 52.0
offset_right = 246.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 40
text = "Coins: "

[node name="BagBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 363.0
offset_right = 336.0
offset_bottom = 642.0
texture_normal = ExtResource("3_8r1wq")
ignore_texture_size = true
stretch_mode = 4

[node name="coinimg" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 123.0
offset_bottom = 114.0
texture = ExtResource("2_1l46r")
expand_mode = 1
stretch_mode = 4

[node name="bgalpha" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="Bag" parent="." instance=ExtResource("2_xfvoa")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="BagBtn" to="." method="_on_bag_btn_pressed"]
